add hortizontional scroll to hourly forecast

--- a/index.html
+++ b/index.html
@@ -33,6 +33,26 @@
             <p>icon</p>
             <p>temp</p>
           </section>
+          <section>
+            <h4>NOW</h4>
+            <p>icon</p>
+            <p>temp</p>
+          </section>
+          <section>
+            <h4>NOW</h4>
+            <p>icon</p>
+            <p>temp</p>
+          </section>
+          <section>
+            <h4>NOW</h4>
+            <p>icon</p>
+            <p>temp</p>
+          </section>
+          <section>
+            <h4>NOW</h4>
+            <p>icon</p>
+            <p>temp</p>
+          </section>
         </div>
       </article>
       <article class="five-day">
