5 day forecast and ui updated

--- a/index.html
+++ b/index.html
@@ -17,36 +17,18 @@
           <span id="high">high</span> <span id="low"> low</span>
         </section>
       </article>
-      <article class="hourly-forecast">
-        <h2>Hourly-forecast</h2>
-        <div id="inside-hourly-forecast-div-id" class="inside-hourly-forecast">
-          <!-- <section>
-            <h4 id="time-hourly">NOW</h4>
-            <p id="icon-hourly" >icon</p>
-            <p id="temp-hourly">temp</p>
-          </section> -->
-        </div>
-      </article>
+      <!-- five day forecast -->
       <article class="five-day">
         <h2>5 Day-forecast</h2>
-        <div class="inside-five-day-forecast">
-          <section>
-            <h4>Today</h4>
-            <section>
-              <h4>NOW</h4>
-              <p>icon</p>
-              <p>temp</p>
-            </section>
-          </section>
-          <section>
-            <h4>Tommorrow</h4>
-            <section>
-              <h4>NOW</h4>
-              <p>icon</p>
-              <p>temp</p>
-            </section>
-          </section>
-        </div>
+        <div class="inside-five-day-forecast"></div>
+      </article>
+      <!-- hourly-forecast -->
+      <article class="hourly-forecast">
+        <h2>Hourly-forecast</h2>
+        <div
+          id="inside-hourly-forecast-div-id"
+          class="inside-hourly-forecast"
+        ></div>
       </article>
       <article class="feel-like">
         <h3>Feels Like</h3>
