data list serach added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
   </head>
   <body>
     <main class="container">
+      <article class="search">
+        <input
+          id="input-cites"
+          list="cities"
+          name="search"
+          type="text"
+          placeholder="Search City"
+          autocomplete="off"
+        />
+        <datalist id="cities">
+
+        </datalist>
+      </article>
       <article class="city">
         <h1 id="city-name">City Name</h1>
         <h1 id="temp-main">Temp</h1>
